Fix spacing.

--- a/src/scss/pixel/components/_type.scss
+++ b/src/scss/pixel/components/_type.scss
@@ -2,6 +2,11 @@
  * = Typography
  */
 
+// Google fonts flickering fix
+html.wf-loading * {
+	opacity: 0;
+}
+
 h1,h2,h3,h4,h5,h6,
 .h1, .h2, .h3, .h4, .h5, .h6{
 	font-weight: $headings-font-weight;
